rewrite some things and fixes